# gpt-experiments

./: .gitignore  USAGE.md  __init__.py  model.py  pyproject.toml  requirements.txt  script.py
configs/: README.md  config.py  grpo_cluster.yaml  grpo_config.py  grpo_local.yaml
models/: gpt2_loader.py  gpt2_model.py  gpt_oss_model.py
training/: grpo_training.py  rewards.py
utils/: device_utils.py  training_tracker.py
